force-app/main/default/objects/Object_Mapping_Configuration__mdt/Object_Mapping_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Parent metadata type that defines the overall configuration for mapping data between two Salesforce objects. Each configuration can have multiple child field mappings.</description>
    <label>Object Mapping Configuration</label>
    <pluralLabel>Object Mapping Configurations</pluralLabel>
</CustomObject>