force-app/main/default/objects/Object_Mapping_Configuration__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this mapping configuration is active. When inactive, all child field mappings are ignored.</description>
    <inlineHelpText>Check to enable this mapping configuration. Uncheck to temporarily disable all field mappings without deleting records.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>