force-app/main/default/objects/Object_Mapping_Configuration__mdt/fields/Create_Target_Record__c.field-meta.xml
<CustomField>
    <fullName>Create_Target_Record__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, creates a new target record. If false, updates an existing target record (requires lookup field).</description>
    <inlineHelpText>Check to create a new target record. Uncheck to update an existing related record.</inlineHelpText>
    <label>Create Target Record</label>
    <type>Checkbox</type>
</CustomField>