force-app/main/default/objects/Object_Mapping_Configuration__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of this mapping configuration, its purpose, and any special considerations</description>
    <inlineHelpText>Enter a description explaining the purpose of this mapping, when it&apos;s used, and any special business logic.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>