force-app/main/default/objects/Object_Mapping_Configuration__mdt/fields/Handler_Class__c.field-meta.xml
<CustomField>
    <fullName>Handler_Class__c</fullName>
    <description>Optional: Apex class name for custom transformation logic. Class must implement IObjectMappingHandler interface.</description>
    <inlineHelpText>Enter the name of an Apex class for custom mapping logic. Leave blank to use standard GenericObjectMapper. Class must implement IObjectMappingHandler interface.</inlineHelpText>
    <label>Handler Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>