force-app/main/default/objects/Object_Mapping_Configuration__mdt/fields/Source_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_API_Name__c</fullName>
    <description>API name of the source object from which data will be read (e.g., &apos;PartnerFundRequest&apos;, &apos;Account&apos;, &apos;Opportunity&apos;)</description>
    <inlineHelpText>Enter the API name of the source object. This is the object from which field values will be read.</inlineHelpText>
    <label>Source Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>