force-app/main/default/objects/Object_Mapping_Configuration__mdt/fields/Target_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API_Name__c</fullName>
    <description>API name of the target object to which data will be written (e.g., &apos;Campaign&apos;, &apos;Contact&apos;, &apos;Case&apos;)</description>
    <inlineHelpText>Enter the API name of the target object. This is the object to which field values will be written.</inlineHelpText>
    <label>Target Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>